--- a/index.html
+++ b/index.html
@@ -8,6 +8,42 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <section id="contact-wrapper">
+    <h2>Posez-nous vos question !</h2>
+
+    <form id="contact-form">
+      <label for="name">Nom</label>
+      <input type="text" name="name" id="name">
+
+      <label for="email">Email</label>
+      <input type="email" name="email" id="email">
+
+      <label for="phoneNumber">Numéro de téléphone</label>
+      <input type="text" name="phoneNumber" id="phoneNumber">
+
+      <label for="category">Categorie de question</label>
+      <select name="category" id="category">
+        <option value="">&nbsp; Choisissez une categorie &nbsp;</option>
+        <option value="aide">Aide</option>
+        <option value="pro">Contact professionnelle</option>
+      </select>
+
+      <label for="message">Votre message</label>
+      <textarea name="message" id="message" rows="10"></textarea>
+
+      <button class="send-button">Envoyer</button>
+
+      <fieldset>
+        <legend>Souhaitez-vous recevoir nos news ?</legend>
+
+        <input type="radio" name="news" id="yes" checked>
+        <label for="yes">Oui</label>
+
+        <input type="radio" name="news" id="no">
+        <label for="no">Non</label>
+      </fieldset>
+    </form>
+  </section>
   <script src="script.js"></script>
 </body>
 </html>
